--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     TODO: Change "Your Name" below.
                     The text in the `data-text` attribute will be typed out automatically.
                 -->
-                <h1 class="hero-title">Hi, I'm Your Name.</h1>
+                <h1 class="hero-title">Hi, I'm Brandon.</h1>
                 <p class="hero-subtitle">I build solutions for the <span id="type-text"></span><span class="type-cursor">|</span></p>
                 <a href="#projects" class="cta-button">View My Work</a>
             </div>
